# dune-release-testing

./: CHANGES.md  README.md  dummy.opam  dune-project  index.html  lol.opam
doc/dummy/: index.html
dummy/: index.html
dummy/Dummy/: index.html
lib/: dummy.ml  dune
